--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,33 +5,10 @@ import Card from '../components/Card.astro';
 
 <Layout title="Hello There">
 	<main>
-		<h1>My name is <span class="text-gradient">Chris Zavala</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Hello There"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<h1><span class="text-gradient">Christopher Zavala</span></h1>
+		<h2>
+			Full Stack Software Developer
+		<h2>
 	</main>
 </Layout>
 
