--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,15 @@ import Card from '../components/Card.astro';
 
 <Layout title="Hello There">
 	<main>  
-        <div>
-            <div class="align-middle max-w-50 px-20 pt-20">
-                <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
-                <h2 class="text-light text-xl">Software Developer <span class="text-middle"> | </span>Cary, NC<h2>    
+        <div class="m-auto max-w-screen-md">
+            <div class="flex flex-row pt-20 ">
+                <div class="">
+                    <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
+                    <h2 class="text-light text-xl font-bold">Software Developer <span class="text-middle"> | </span>Cary, NC</h2>
+                </div>
             </div>
-            <div>
+            <div class="content-center pl-20 text-xl">
+                <p class="text-middle"> A Software Developer interested in building scalable Full-Stack applications. </p>
             </div>
         </div>
 	</main>
