--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,20 +3,42 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import { Image } from 'astro:assets';
 import logo from '../images/logo.svg';
+import gitHub from '../images/github-mark-white.svg';
+import linkedIn from '../images/In-White-128@2x.png';
 ---
 
-<Layout title="Hello There">
+<Layout title="Christopher Zavala's Portfolio Site">
 	<main>  
-        <div class="m-auto max-w-screen-md">
-            <div class="flex flex-shrink pt-20">
-                <Image src={logo} alt="A simplified logo of quetzocoatl" class="max-h-40 shrink"/>
-                <div class="grow">
+        <div class="flex flex-col items-center gap-5 align-middle m-auto max-w-screen-md">
+            <div class="flex pt-20 justify-center gap-5 items-center max-h-min min-w-fit">
+                <Image src={logo} alt="A simplified logo of quetzocoatl" class=" max-h-16 w-auto"/>
+                <div class="h-fit w-max">
                     <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
                     <h2 class="text-light text-xl font-bold">Software Developer <span class="text-middle"> | </span>Cary, NC</h2>
                 </div>
             </div>
-            <div class="content-center pl-20 text-xl">
-                <p class="text-middle"> A Software Developer interested in building scalable Full-Stack applications. </p>
+            <div class="text-xl pt-5 pb-5">
+                <p class="text-middle"> 
+                    Hello I am  <span class="font-bold">Christopher Zavala</span> a <span class="font-bold">Software Developer</span>
+                     interested in building scalable <span class="font-bold">backend solutions</span>. My interests include
+                    <span class="font-bold">Homelabbing</span>, <span class="font-bold">Open-Source Software</span>, 
+                    and <span class="font-bold">Indie Game Development</span>.
+                </p>
+            </div>
+            <div class="flex gap-5 h-10 ">
+                <a href="https://github.com/zavastopher" target="_blank" class="h-full">
+                    <Image src={gitHub} alt="github repo link" class="h-full w-auto"/>
+                </a>
+                <a href="https://www.linkedin.com/in/christopher-zavala-15a92020a/" target="_blank" class="h-full">
+                    <Image src={linkedIn} alt="linkedin link" class="h-full w-auto"/>
+                </a>
+            </div>
+            <div class="flex gap-5">
+                <Card  title="Languages" body="I am willing to learn any language but here are the ones that I know the best." href="nill"/>
+                <Card title="Projects" body="Projects that showcase some of my key skills." href="nil"/>
+                <Card title="Tools" body="Here are some tools I use most frequently." href="nil"/>
+            </div> 
+            <div>
             </div>
         </div>
 	</main>
