--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="w-fit sm:w-auto m-1">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
