--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,16 @@ import linkedIn from '../images/In-White-128@2x.png';
 
 <Layout title="Christopher Zavala's Portfolio Site">
 	<main>  
-        <div class="flex flex-col items-center gap-5 align-middle m-auto max-w-screen-md">
-            <div class="flex pt-20 justify-center gap-5 items-center max-h-min min-w-fit">
+        <div class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md">
+            <div class="flex pt-20 justify-center gap-5 items-center max-h-min max-w-full">
                 <Image src={logo} alt="A simplified logo of quetzocoatl" class=" max-h-16 w-auto"/>
                 <div class="h-fit w-max">
                     <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
-                    <h2 class="text-light text-xl font-bold">Software Developer <span class="text-middle"> | </span>Cary, NC</h2>
+                    <h2 class="text-light text-xl font-bold">
+                        Software Developer 
+                        <span class="text-middle hidden sm:visible"> | </span>
+                        <span class="block sm:inline">Cary, NC</span>
+                    </h2>
                 </div>
             </div>
             <div class="text-xl pt-5 pb-5">
