--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,9 +38,8 @@ import linkedIn from '../images/In-White-128@2x.png';
                 </a>
             </div>
             <div class="flex gap-5 flex-col sm:flex-row">
-                <Card  title="Languages" body="I am willing to learn any language but here are the ones that I know the best." href="nill"/>
+                <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="nill"/>
                 <Card title="Projects" body="Projects that showcase some of my key skills." href="nil"/>
-                <Card title="Tools" body="Here are some tools I use most frequently." href="nil"/>
             </div> 
             <div>
             </div>
