--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,41 +8,41 @@ import linkedIn from '../images/In-White-128@2x.png';
 ---
 
 <Layout title="Christopher Zavala's Portfolio Site">
-	<main>  
-        <div class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md">
-            <div class="flex pt-20 justify-center gap-5 items-center max-h-min max-w-full">
-                <Image src={logo} alt="A simplified logo of quetzocoatl" class=" max-h-16 w-auto"/>
-                <div class="h-fit w-max">
-                    <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
-                    <h2 class="text-light text-xl font-bold">
-                        Software Developer 
-                        <span class="text-middle hidden sm:visible"> | </span>
-                        <span class="block sm:inline">Cary, NC</span>
-                    </h2>
-                </div>
+	<main class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md">  
+        <div class="flex pt-20 justify-center gap-5 items-center max-h-min max-w-full">
+            <Image src={logo} alt="A simplified logo of quetzocoatl" class=" max-h-16 w-auto"/>
+            <div class="h-fit w-max">
+                <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
+                <h2 class="text-light text-xl font-bold">
+                    Software Developer 
+                    <span class="text-middle invisible sm:visible"> | </span>
+                    <span class="block sm:inline">Cary, NC</span>
+                </h2>
             </div>
-            <div class="text-xl pt-5 pb-5">
-                <p class="text-middle"> 
-                    Hello I am  <span class="font-bold">Christopher Zavala</span> a <span class="font-bold">Software Developer</span>
-                     interested in building scalable <span class="font-bold">backend solutions</span>. My interests include
-                    <span class="font-bold">Homelabbing</span>, <span class="font-bold">Open-Source Software</span>, 
-                    and <span class="font-bold">Indie Game Development</span>.
-                </p>
-            </div>
-            <div class="flex gap-5 h-10 ">
-                <a href="https://github.com/zavastopher" target="_blank" class="h-full">
-                    <Image src={gitHub} alt="github repo link" class="h-full w-auto"/>
-                </a>
-                <a href="https://www.linkedin.com/in/christopher-zavala-15a92020a/" target="_blank" class="h-full">
-                    <Image src={linkedIn} alt="linkedin link" class="h-full w-auto"/>
-                </a>
-            </div>
-            <div class="flex gap-5 flex-col sm:flex-row">
-                <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="nill"/>
-                <Card title="Projects" body="Projects that showcase some of my key skills." href="nil"/>
-            </div> 
-            <div>
-            </div>
+        </div>
+        <div class="text-xl pt-5 pb-5">
+            <p class="text-middle"> 
+                Hello I am  <span class="font-bold">Christopher Zavala</span> a <span class="font-bold">Software Developer</span>
+                    interested in building scalable <span class="font-bold">backend solutions</span>. My interests include
+                <span class="font-bold">Homelabbing</span>, <span class="font-bold">Open-Source Software</span>, 
+                and <span class="font-bold">Indie Game Development</span>.
+            </p>
+        </div>
+        <div class="flex gap-5 h-10 ">
+            <a href="https://github.com/zavastopher" target="_blank" class="h-full hover:scale-125 ease-in duration-150">
+                <Image src={gitHub} alt="github repo link" class="h-full w-auto"/>
+            </a>
+            <a href="https://www.linkedin.com/in/christopher-zavala-15a92020a/" target="_blank" class="h-full hover:scale-125 ease-in duration-150">
+                <Image src={linkedIn} alt="linkedin link" class="h-full w-auto"/>
+            </a>
+        </div>
+        <div class="flex gap-5 flex-col sm:flex-row">
+            <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="zavastopher.github.io/skills"/>
+            <Card title="Projects" body="Projects that showcase some of my key skills." href="zavastopher.github.io/projects"/>
+        </div> 
+        <div class="flex gap-5 flex-col sm:flex-row">
+            <Card title="Tools" body="Tools that I employ to get stuff done." href="zavastopher.github.io/tools"/>
+            <Card title="About" body="More about what interests me and where I'm at in my software dev journey." href="zavastopher.github.io/about"/>
         </div>
 	</main>
 </Layout>
