Tech stack page being expanded

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@ import gitHub from '../images/github-mark-white.svg';
 import linkedIn from '../images/In-White-128@2x.png';
 ---
 
-<Layout title="Christopher Zavala's Portfolio Site">
+<Layout title="Chris Zavala">
 	<main class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md">  
-        <div class="flex pt-20 justify-center gap-5 items-center max-h-min max-w-full">
+        <div class="flex justify-center gap-5 items-center max-h-min max-w-full">
             <Image src={logo} alt="A simplified logo of quetzocoatl" class=" max-h-16 w-auto"/>
             <div class="h-fit w-max">
                 <h1 class="text-accent1 text-3xl font-bold">Christopher Zavala</h1>
@@ -21,7 +21,7 @@ import linkedIn from '../images/In-White-128@2x.png';
             </div>
         </div>
         <div class="text-xl pt-5 pb-5">
-            <p class="text-middle"> 
+            <p class="text-middle font-serif"> 
                 Hello I am  <span class="font-bold">Christopher Zavala</span> a <span class="font-bold">Software Developer</span>
                     interested in building scalable <span class="font-bold">backend solutions</span>. My interests include
                 <span class="font-bold">Homelabbing</span>, <span class="font-bold">Open-Source Software</span>, 
@@ -37,7 +37,7 @@ import linkedIn from '../images/In-White-128@2x.png';
             </a>
         </div>
         <div class="flex gap-5 flex-col sm:flex-row">
-            <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="zavastopher.github.io/skills"/>
+            <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="zavastopher.github.io/tech-stack"/>
             <Card title="Projects" body="Projects that showcase some of my key skills." href="zavastopher.github.io/projects"/>
         </div> 
         <div class="flex gap-5 flex-col sm:flex-row">
