--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
+import Header from '../components/header.astro';
 ---
 
 <!doctype html>
@@ -16,7 +17,8 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-dark">
+	<body class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md pt-5 bg-dark">
+		<Header />	
 		<slot />
 	</body>
 </html>
