Added more section in my backend stack

--- a/src/pages/tech-stack.astro
+++ b/src/pages/tech-stack.astro
@@ -81,6 +81,22 @@ import { Icon } from 'astro-icon/components'
                     nGinx
                 </div>
             </div>
+            <div class="flex flex-col self-center more">
+                <p class="text-middle font-serif hidden more-body">
+                    I am currently exploring <span class="font-bold">GO</span> as my primary backend language. In the past
+                    I have leveraged Python Flask to build APIs but I was interested in GO for it's performance and Asynchronous
+                    capabilities. Java and C on the other hand are languages I learned during my time at NCSU. Java being
+                    the language the majority of courses used to teach us computer science concepts. C was used to teach
+                    us lower level OS programming. Finally nGinx was the Proxy of choice I was taught during my web app
+                    course at state and as a result it is what I use when building all of my projects that need a reverse
+                    proxy. NodeJs, was also leveraged during this class as well as a way to teach us how to use Javascript
+                    in a server side capacity so that we could learn it on a deeper level.
+                </p>
+                <span class="text-accent1 justify-center self-center hover:cursor-pointer hover:text-accent2 more-link">
+                    more &downarrow;
+                </span>
+                    
+            </div>
         </div>
         <div class="flex flex-col gap-5">
             <h1 class="text-accent2 font-bold text-2xl">
