Tech-stack blurbs added

--- a/src/pages/tech-stack.astro
+++ b/src/pages/tech-stack.astro
@@ -83,14 +83,15 @@ import { Icon } from 'astro-icon/components'
             </div>
             <div class="flex flex-col self-center more">
                 <p class="text-middle font-serif hidden more-body">
-                    I am currently exploring <span class="font-bold">GO</span> as my primary backend language. In the past
-                    I have leveraged Python Flask to build APIs but I was interested in GO for it's performance and Asynchronous
-                    capabilities. Java and C on the other hand are languages I learned during my time at NCSU. Java being
-                    the language the majority of courses used to teach us computer science concepts. C was used to teach
-                    us lower level OS programming. Finally nGinx was the Proxy of choice I was taught during my web app
-                    course at state and as a result it is what I use when building all of my projects that need a reverse
-                    proxy. NodeJs, was also leveraged during this class as well as a way to teach us how to use Javascript
-                    in a server side capacity so that we could learn it on a deeper level.
+                    For my two largest projects, Wolfwatch and Fallout-TTRPG-Pip-Boy, I have extensively worked with Python Flask 
+                    to create the API. I have also used NodeJS to build school projects as I took a client-server computing class 
+                    that required us to learn CSS, HTML, and Javascript without any frameworks, with the idea being if we used 
+                    Javascript on the server we would learn Javascript on a deeper level along with nGinx to teach us the basics 
+                    of how a reverse proxy is used. During My time at NCSU I also learned C and Java as the two languages used to 
+                    teach us the fundamentals of computer science. Java was used extensively from the start of the curriculum to 
+                    the end. C on the other hand was used during my OS and Systems level programming courses. Finally I am 
+                    currently learning GO by building a few projects as I am excited by it's performance promises and async 
+                    capabilities. I plan on using it where possible when creating projects from here on out. 
                 </p>
                 <span class="text-accent1 justify-center self-center hover:cursor-pointer hover:text-accent2 more-link">
                     more &downarrow;
@@ -99,7 +100,7 @@ import { Icon } from 'astro-icon/components'
             </div>
         </div>
         <div class="flex flex-col gap-5">
-            <h1 class="text-accent2 font-bold text-2xl">
+            <h1 class="text-accent2 font-bold text-2xl self-center">
                 Databases
             </h1>
             <div class="flex flex-wrap gap-5 justify-center">
@@ -111,6 +112,19 @@ import { Icon } from 'astro-icon/components'
                     <Icon name="skill-icons:sqlite" class="h-full w-auto"/>
                     SQLite
                 </div>
+            </div>
+            <div class="flex flex-col self-center more">
+                <p class="text-middle font-serif hidden more-body">
+                    When it comes to databases most of my experience has been revolving around SQL. During my time at NCSU
+                    I took a databases course that focused on the fundamentals of relational databases, using MySQL as the
+                    database of choice. I have since added SQLite to my belt as it is the main database being used on my
+                    Fallout-TTRPG-Pip-Boy project. This was because the project is meant to handle a relatively small amount 
+                    of users so SQLite seemed more than capable of fitting our needs. I plan on working with NoSQL databases 
+                    future where they seem to be the best fit, but I haven't had the opportunity to employ one quite yet.
+                </p>
+                <span class="text-accent1 justify-center self-center hover:cursor-pointer hover:text-accent2 more-link">
+                    more &downarrow;
+                </span>
             </div>
         </div>
     </main>
