Finished tools page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Header from '../components/header.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md pt-5 bg-dark">
+	<body class="flex flex-col items-center gap-5 align-middle m-auto w-screen max-w-screen-md pt-5 bg-dark pb-5">
 		<Header />	
 		<slot />
 	</body>
