Started on About and Projects page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,5 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 <Layout title="Chris Zavala">
+    <div class="intro">
+        <h1 class="text-accent1">
+            Hello there! I am Christopher (Chris) Zavala
+        </h1>
+    </div>
+    
     
 </Layout>
