--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Image from "astro/components/Image.astro";
 ---
 <Layout title="Chris Zavala">
-
+    <div>
+        <div>
+            <h1>Fallout-TTRPG-Pip-Boy</h1>
+        </div>
+    </div>
+    <div>
+        <div>
+            <h1>Wolfwatch</h1>
+        </div>
+    </div>
+    <div>
+        <div>
+            <h1>Dungeons and Sounds</h1>
+        </div>
+    </div>
+    <div>
+        <div>
+            <h1>BlackJack</h1>
+        </div>
+    </div>
 </Layout>
