Added images to 3/4 projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,41 +1,74 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Image from "astro/components/Image.astro";
+import { Image } from 'astro:assets';
 import Card from "../components/Card.astro";
+import fallout from '../images/fallout-ttrpg-pip-boy.png';
+import wolfwatch from '../images/wolfwatch.png';
+import blackjack from '../images/blackjack.png';
 ---
 <Layout title="Chris Zavala">
-    <a class="text-dark bg-middle rounded-xl link-card hover:text-accent2">
-        <div class="p-3">
+    <a class="flex text-dark bg-middle rounded-xl link-card hover:text-accent2 w-full" href="https://github.com/zavastopher/Fallout-TTRPG-WebApp" target="_blank">
+        <Image src={fallout} alt="an image of a fallout pip boy" class="max-w-sm"/>
+        <div class="p-3 ">
             <h1 class="font-bold pb-2">Fallout-TTRPG-Pip-Boy</h1>
             <p>
-
+                A Pip-Boy style web-app for managing character sheets for the Fallout-TTRPG
             </p>
             <ul class="list-disc pl-5 w-full">
-
+                <li>Full-Stack Web-app</li>
+                <li>React</li>
+                <li>Python Flask</li>
+                <li>nGinx</li>
+                <li>Docker</li>
+                <li>API Design</li>
+                <li>SQLite</li>
+                <li>npm</li>
+                <li>NodeJS</li>
             </ul>
         </div>
     </a>
-    <a class="text-dark bg-middle rounded-xl link-card hover:text-accent2">
+    <a class="flex text-dark bg-middle rounded-xl link-card hover:text-accent2 w-full" href="https://github.com/zavastopher/wolfwatch" target="_blank">
+        <Image src={wolfwatch} alt="an image of a wolfwatch user frontend" class="max-w-sm"/>
         <div class="p-3">
             <h1 class="font-bold pb-2">Wolfwatch</h1>
             <p>
-
+                An assignment web-scanner
             </p>
             <ul class="list-disc pl-5 w-full">
-
+                <li>Full-Stack Web-App</li>
+                <li>NLP</li>
+                <li>Selenium</li>
+                <li>Python Flask</li>
+                <li>nGinx</li>
+                <li>NextJs</li>
+                <li>Redis</li>
+                <li>Celery</li>
+                <li>Docker</li>
             </ul>
         </div>
     </a>
-    <a class="text-dark bg-middle rounded-xl link-card hover:text-accent2">
-        <div class="p-3">
-            <h1 class="font-bold pb-2">BlackJack</h1>
+    <a class="flex text-dark bg-middle rounded-xl link-card hover:text-accent2 w-full h-fit" href="https://github.com/zavastopher/blackjack" target="_blank">
+        <Image src={blackjack} alt="an image of a blackjack login page" class="max-w-sm"/>
+        <div class="p-3 flex flex-col gap-5 h-full">
+            <h1 class="font-bold">BlackJack</h1>
             <p>
+                A Blackjack Practicing Web-App
             </p>
-            <ul class="list-disc pl-5 w-full">
-            </ul>
+
+            <span class="font-bold">Tags: </span>
+            <p class="flex flex-wrap gap-1 text-dark">
+                <span class="tag">Full-Stack Web-App</span>
+                <span class="tag">NodeJS</span>
+                <span class="tag">HTML</span>
+                <span class="tag">CSS</span>
+                <span class="tag">nGinx</span>
+                <span class="tag">User Authentication</span>
+                <span class="tag">Progressive Web-App</span>
+                <span class="tag">Docker</span>
+            </p>
         </div>
     </a>
-    <a class="text-dark bg-middle rounded-xl link-card hover:text-accent2">
+    <a class="flex text-dark bg-middle rounded-xl link-card hover:text-accent2 w-full" href="https://github.com/zavastopher/Dungeons-And-Sounds?tab=readme-ov-file" target="_blank">
         <div class="p-3">
             <h1 class="font-bold pb-2">Dungeons and Sounds</h1>
             <p>
@@ -58,7 +91,6 @@ import Card from "../components/Card.astro";
 		font-size: inherit;
 		font-family: inherit;
 		color: white;
-		padding: 0.5em 1em;
 		outline: none;
 		border: none;
 		background-color: hsl(236, 32%, 26%);
@@ -72,8 +104,8 @@ import Card from "../components/Card.astro";
 		position: absolute;
 		top: 100%;
 		right: 100%;
-		width: 6rem;
-		height: 6em;
+		width: 7rem;
+		height: 7rem;
 		border-radius: 50%;
 		background-color: #78CA9D;
 		transform-origin: center;
@@ -89,4 +121,11 @@ import Card from "../components/Card.astro";
 	.link-card:hover::before {
 		transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
 	}
+    
+    .tag {
+        background-color: #D491B4;
+        padding-left: .2rem;
+        padding-right: .2rem;
+        border-radius: .2rem;
+    }
 </style>
