--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -25,11 +25,11 @@ const { href, title, body } = Astro.props;
 		position: relative;
 		font-size: inherit;
 		font-family: inherit;
-		color: white;
+		//color: white;
 		padding: 0.5em 1em;
 		outline: none;
 		border: none;
-		background-color: hsl(236, 32%, 26%);
+		//background-color: hsl(236, 32%, 26%);
 		overflow: hidden;
 		transition: color 0.4s ease-in-out;
 	}
